fix a visual issue with the mountains background on ios

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,7 +31,7 @@ main {
 
 footer {
   position: absolute;
-  bottom: 6vh;
+  bottom: 3vh;
   width: 100%;
 
   ul#socialMediaIconsList {
